test/fixtures/public/analysis/success/var_declaration2.jmm
import java.io.File;
import Parent;

class Child extends Parent {
    int a;
    boolean b;

    public static void main(String[] args) {
        File c;

        c = new File();
    }
}