test/fixtures/public/analysis/fail/import_type.jmm
import Parent;

class Child extends Parent {
    int a;
    boolean b;

    public static void main(String[] args) {
        File c;
    }
}